apps/base/commafeed/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: commafeed
  labels:
    app: commafeed
    app.kubernetes.io/name: commafeed
    app.kubernetes.io/component: svc
    app.kubernetes.io/part-of: commafeed
spec:
  selector:
    app: commafeed
  type: ClusterIP
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
